# x-agent

./: .gitignore  CLAUDE.md  INTERACTIVE_GUIDANCE_IMPLEMENTATION.md  QODER.md  README.md  SKILL_SYSTEM_FIX_REPORT.md  commit_changes.sh  debug_agents_mapping.py  diagnose_cache.py  git_commit.py  path_test.py  quick_verify_phase2a.sh  restart-backend.sh  restart-services.sh  restart.sh  start-backend.sh  start-frontend.sh  start.sh  test-system-role.sh  validate_skills.py  verify_phase2a.py
backend/: CODE_ORGANIZATION.md  README.md  SKILL_SYSTEM_TEST_REPORT.md  demo_cache.py  package.json  pyproject.toml  test_cache_functionality.py  test_cache_paths.py  test_corrected_path.py  test_simple_paths.py  x-agent.yaml.example
backend/devtools/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  system-role-implementation.md
backend/devtools/debug/: __init__.py  analyze_trace.py
backend/devtools/phase2/: PHASE2A_COMPLETE.md  PHASE2_SUMMARY.md  VERIFICATION_GUIDE.md  phase2_implementation_plan.md  test_phase2_fields.py
backend/devtools/trace_analysis/: __init__.py  analyze_pip_install_repeat.py  analyze_skill_execution_path.py  analyze_trace_f861b6ff.py  analyze_trace_install.py  analyze_trace_timeline_detail.py  analyze_wrong_task_execution.py  detailed_trace_analysis.py  full_trace_analysis.py  timeline_analysis.py  trace_4666299b_failure_analysis.md
backend/devtools/workspace_organization/: auto_organize.py  fix_workspace_organization.py
backend/docs/guides/: LOG_ROTATION_GUIDE.md
backend/docs/integration/: ALIYUN_INTEGRATION_SUMMARY.md  ALIYUN_OPENSEARCH_CONFIG.md  SSL_CERTIFICATE_FIX.md  SSL_FIX_FINAL.md  WEB_SEARCH_DEBUGGER_IMPLEMENTATION.md
backend/docs/orchestrator/: INTEGRATION_GUIDE.md
backend/docs/references/: QUICK_REFERENCE.md
backend/documents/: 2026_ai_trends_research.md
backend/scripts/: ALIYUN_WEB_SEARCH_TESTING.md  analyze_iterations.py  analyze_trace_76fdd8ed.py  demo_semantic_mapping.py  generate_presentation.py  spring_story.py  test_compression.py  verify_phase5_6.sh  verify_web_search_integration.sh
backend/scripts/testing/: simple_test_v2.py
backend/src/: main.py
backend/src/api/: websocket.py
backend/src/config/: __init__.py  loader.py  manager.py  models.py  validator.py  watcher.py
backend/src/core/: __init__.py  agent.py  context.py  context_loader.py  session.py  session_detector.py
backend/src/memory/: __init__.py  _logger.py  context_builder.py  embedder.py  file_watcher.py  hybrid_search.py  importance_detector.py  md_sync.py  models.py  spirit_loader.py  vector_store.py
backend/src/models/: __init__.py  base.py  compression.py  events.py  message.py  session.py  skill.py  stat.py
backend/src/orchestrator/: __init__.py  engine.py  interactive_guidance.py  light_planner.py  llm_skill_matcher.py  message_builder.py  milestone_validator.py  plan_context.py  plan_monitor.py  plan_monitor_optimized.py  plan_monitor_v2.py  plan_persistence.py  policy_engine.py  policy_parser.py  policy_parser.py.backup  react_loop.py  self_healing_monitor.py  structured_planner.py  task_analyzer.py
backend/src/plugins/: __init__.py  base.py  manager.py
backend/src/services/: __init__.py  analysis_cache.py  code_analyzer.py  embedder.py  error_learning.py  flow_builder.py  log_parser.py  memory_maintenance.py  skill_parser.py  skill_registry.py  skill_router.py  smart_memory.py  stat_service.py  storage.py  template_service.py  trace_analyzer.py
backend/src/tools/: __init__.py  base.py  manager.py  semantic_mapping.py
backend/src/utils/: __init__.py  errors.py  file_utils.py  logger.py  trace.py  validation.py
backend/tests/: OPTIMIZATION_COMPLETION_SUMMARY.md  OPTIMIZATION_VERIFICATION_REPORT.md
backend/tests/integration/: test_memory_flow.py  (+4 more)
backend/workspace/: 2026_ai_trends_research_draft.md  research_draft.md
(+297 files in other folders)
