[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x-agent"
version = "0.1.0"
description = "X-Agent - Personal AI Agent with modular architecture"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "X-Agent Team" }
]
keywords = ["ai", "agent", "llm", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "watchdog>=3.0.0",
    
    # Database
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    
    # LLM
    "openai>=1.10.0",
    "httpx>=0.26.0",
    
    # Memory System (ONNX-only, PyTorch-free)
    "onnxruntime>=1.16.0",
    "transformers>=4.30.0",  # For tokenizer only (no PyTorch)
    "numpy>=1.24.0",
    "python-frontmatter>=1.0.0",
    
    # Agent Guidance (新增)
    "apscheduler>=3.10.0",
    "aiofiles>=23.0.0",
    "filelock>=3.13.0",
    
    # Logging & Utils
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "orjson>=3.9.10",
    
    # Security
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "asgi-lifespan>=2.1.0",
    
    # Linting & Formatting
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    
    # Type Stubs
    "types-pyyaml>=6.0.12",
]

[project.scripts]
x-agent = "x_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/x_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["x_agent"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=x_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/x_agent"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
